--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: "Bree Serif", serif;
+  font-family: "Poppins", sans-serif;
+  /* font-family: "Bree Serif", serif; */
 }
